--- a/style.css
+++ b/style.css
@@ -42,17 +42,23 @@ nav {border-bottom: solid 1px black;}
 
 
 /*video*/
-video {position: relative; height:500px;width: 100%;}
+video {height:500px;width: 100%;}
 
-.header { margin: 0px;;overflow: hidden;}
-.content h1 {position: absolute;top: 20px;}
+.textoV {position: absolute;
+  display: flex;
+  justify-content: center;
+  color: white;
+  right: 30px;
+  left: 50px;
+  padding: 200px;}
+
 .header-video {
   
   height: 0px;
   width: 100%;   
   padding-bottom: 40%;
-  padding-top: 5%;
   overflow: hidden;
+  position: relative;;
 }
 
 
