--- a/chess/styles.css
+++ b/chess/styles.css
@@ -1,64 +1,79 @@
 * {
-    padding: 0;
-    margin: 0;
-    font-family: Oswald;
+  padding: 0;
+  margin: 0;
+  font-family: Oswald;
 }
 
 body {
-    margin: 50px;
-    display: block;
+  margin: 40px;
+  display: block;
+  height: 100vh;
+  position: relative;
 }
 
 .chessboard {
-    transition-duration: 1000ms;
-    width: 560px;
-    margin-top: 20px;
-    margin-left: 20px;
+  transition-duration: 1000ms;
+  width: 560px;
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 input {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 #board {
-    width: 480px;
-    height: 480px;
-    border: 40px solid rgb(58, 58, 58);
-    transition-timing-function: ease-out;
+  width: 480px;
+  height: 480px;
+  border: 40px solid rgb(58, 58, 58);
+  transition-timing-function: ease-out;
 }
 
 #board-squares {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
 }
 
 #board-squares div {
-   width: 60px;
-   height: 60px;
-   font-size: 45px;
-   text-align: center;
-   transition: 1000ms;
-   transition-timing-function: ease-out;
+  width: 60px;
+  height: 60px;
+  font-size: 45px;
+  text-align: center;
+  transition: 1000ms;
+  transition-timing-function: ease-out;
 }
 
 .piece {
-    transition-duration: 1000ms;
-    transition-timing-function: ease-out;
+  transition-duration: 1000ms;
+  transition-timing-function: ease-out;
 }
 
 .light-square {
-    background-color: rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
 }
 
 .dark-square {
-    background-color: rgb(160, 160, 160);
+  background-color: rgb(160, 160, 160);
 }
 
-input[type=checkbox]:checked + .chessboard {
-    transform: rotate(180deg);
+input[type='checkbox']:checked + .chessboard {
+  transform: rotate(180deg);
 }
 
-input[type=checkbox]:checked + .chessboard > * .piece {
-    transform: rotate(-180deg);
-} 
+input[type='checkbox']:checked + .chessboard > * .piece {
+  transform: rotate(-180deg);
+}
 
+footer {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  background-color: #1b1c20;
+  width: 100%;
+  height: 60px;
+  font-size: 12px;
+  color: #ffff;
+  justify-content: center;
+  align-items: center;
+  font-family: Oswald Light;
+}
