--- a/style.css
+++ b/style.css
@@ -198,13 +198,9 @@ video {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  margin: 100px;
-  padding: 20px;
+  padding: 80px;
   padding-top: 20px;
-
-  width: 400px;
-
-  height: 800px;
+  width: 100%;
   background-color: rgb(235, 236, 240);
   text-align: center;
   font-size: 15px;
@@ -213,6 +209,43 @@ video {
   font-size: 15px;
   font-weight: lighter;
 }
+
+.packages {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.package {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 15px;
+  height: 300px;
+  width: 200px;
+  background-color: white;
+  border-radius: 2%;
+  align-items: center;
+}
+
+.badge-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.price {
+  justify-content: center;
+  align-items: center;
+}
+
+.popular-price {
+  width: 50px;
+  height: 50px;
+  background-color: #3bbdee;
+  color: #ffff;
+  border-radius: 50%;
+}
+
 .card ul {
   list-style: circle;
   list-style-position: inside;
@@ -220,11 +253,14 @@ video {
 }
 
 .boton {
+  width: 100px;
+  height: 40px;
   color: white;
-  background-color: #4caf50;
-  border-radius: 15px;
+  border: none;
+  background-color: #71ce73;
+  border-radius: 10px;
   padding: 10px;
-  box-shadow: 0px 3px #235f25;
+  box-shadow: 0px 3px 0px #66ac64;
 }
 
 li {
@@ -264,4 +300,12 @@ footer {
   justify-content: center;
   align-items: center;
   font-family: Oswald Light;
+}
+
+li div {
+  color: white;
+  width: 20px;
+  height: 20px;
+  background-color: green;
+  border-radius: 50%;
 }
