--- a/chess/styles.css
+++ b/chess/styles.css
@@ -5,17 +5,16 @@
 }
 
 body {
-  margin: 40px;
-  display: block;
-  height: 100vh;
-  position: relative;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .chessboard {
+  padding: 50px;
   transition-duration: 1000ms;
   width: 560px;
-  margin-top: 20px;
-  margin-left: 20px;
 }
 
 input {
@@ -66,8 +65,6 @@ input[type='checkbox']:checked + .chessboard > * .piece {
 
 footer {
   display: flex;
-  position: absolute;
-  bottom: 0;
   background-color: #1b1c20;
   width: 100%;
   height: 60px;
